# minishell

./: .gitignore  CMakeLists.txt  Makefile  ancient_shards.c  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_execve.c  builtin_exit.c  builtin_export.c  builtin_heredoc.c  builtin_pwd.c  builtin_unset.c  colors.h  complex_parser.c  dollar.c  enviroment.c  enviroment.h  error.c  error.h  ft_atoi_s.c  ft_split.c  global.h  handler.c  memory.c  memory.h  minishell  minishell.c  minishell.h  parser.c  parser.h  parser_impl.c  parser_implements.c  pwd.c  signal.c  signal.h  simple_parser.c  split_smart.c  split_smart1.c  stack.c  (+1 more)
gnl/: Makefile  get_next_line.c  get_next_line.h  get_next_line_u.c
inc/: enviroment.h  error.h  get_next_line.h  handler.h  memory.h  minishell.h  parser.h
include/: color.h  enviroment.h  error.h  handler.h  memory.h  minishell.h  parser.h
libft/: Makefile  ft_abs.c  ft_atod.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_issmth1.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  (+14 more)
src/: ancient_shards.c  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_execve.c  builtin_exit.c  builtin_export.c  builtin_heredoc.c  builtin_pwd.c  builtin_unset.c  complex_parser.c  del_quotes.c  dollar.c  enviroment.c  error.c  ft_atoi_s.c  handler.c  memory.c  minishell.c  parser_impl.c  promt.c  rl_bind_key.c  signal.c  simple_parser.c  split_smart.c  split_smart1.c  stack.c  stack1.c
